--- a/local_cluster_config.yaml
+++ b/local_cluster_config.yaml
@@ -6,7 +6,7 @@ cluster_name: my_cluster
 # and opens all the necessary ports to support the Ray cluster.
 # Empty string means disabled. Assumes Docker is installed.
 docker:
-    image: "rayproject/ray-ml:latest-gpu" # You can change this to latest-cpu if you don't need GPU support and want a faster startup
+    image: "rayproject/ray:latest-cpu" # You can change this to latest-cpu if you don't need GPU support and want a faster startup
     # image: rayproject/ray:latest-gpu   # use this one if you don't need ML dependencies, it's faster to pull
     container_name: "ray_container"
     # If true, pulls latest version of image. Otherwise, `docker run` will only pull the image
@@ -23,7 +23,7 @@ provider:
     # (e.g. the cluster is in an AWS VPC and you're starting ray from your laptop)
     # This is useful when debugging the local node provider with cloud VMs.
     # external_head_ip: YOUR_HEAD_PUBLIC_IP
-    worker_ips: [somai-serv02.emory.edu, somai-serv03.emory.edu]
+    worker_ips: [somai-serv03.emory.edu]
     # Optional when running automatic cluster management on prem. If you use a coordinator server,
     # then you can launch multiple autoscaling clusters on the same set of machines, and the coordinator
     # will assign individual nodes to clusters as needed.
@@ -46,13 +46,13 @@ auth:
 # node. This number should be >= 0.
 # Typically, min_workers == max_workers == len(worker_ips).
 # This field is optional.
-min_workers: 2
+min_workers: 1
 
 # The maximum number of workers nodes to launch in addition to the head node.
 # This takes precedence over min_workers.
 # Typically, min_workers == max_workers == len(worker_ips).
 # This field is optional.
-max_workers: 2
+max_workers: 1
 # The default behavior for manually managed clusters is
 # min_workers == max_workers == len(worker_ips),
 # meaning that Ray is started on all available nodes of the cluster.
@@ -119,7 +119,7 @@ setup_commands: []
     # - pip install -U "ray[default] @ https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp37-cp37m-manylinux2014_x86_64.whl"
 
 # Custom commands that will be run on the head node after common setup.
-head_setup_commands: []
+head_setup_commands: ['mkdir ~/.ssh', 'echo -e "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile /dev/null" >> ~/.ssh/config']
 
 # Custom commands that will be run on worker nodes after common setup.
 worker_setup_commands: []
@@ -131,7 +131,7 @@ head_start_ray_commands:
   # - conda activate my_venv && ray stop
   # - conda activate my_venv && ulimit -c unlimited && ray start --head --port=6379 --autoscaling-config=~/ray_bootstrap_config.yaml
     - ray stop
-    - ulimit -c unlimited && ray start --head --port=6379 --autoscaling-config=~/ray_bootstrap_config.yaml
+    - ulimit -c unlimited && ray start --head --port=6379 --dashboard-port=8265 --autoscaling-config=~/ray_bootstrap_config.yaml
 
 # Command to start ray on worker nodes. You don't need to change this.
 worker_start_ray_commands:
