--- a/local_cluster_config.yaml
+++ b/local_cluster_config.yaml
@@ -6,9 +6,9 @@ cluster_name: my_cluster
 # and opens all the necessary ports to support the Ray cluster.
 # Empty string means disabled. Assumes Docker is installed.
 docker:
-    image: "rayproject/ray:latest-cpu" # You can change this to latest-cpu if you don't need GPU support and want a faster startup
+    image: "histotools/histoqc_ray:ray_cluster_functionality" # You can change this to latest-cpu if you don't need GPU support and want a faster startup
     # image: rayproject/ray:latest-gpu   # use this one if you don't need ML dependencies, it's faster to pull
-    container_name: "ray_container"
+    container_name: "jjaco34_hqc_ray"
     # If true, pulls latest version of image. Otherwise, `docker run` will only pull the image
     # if no cached version is present.
     pull_before_run: True
@@ -23,7 +23,7 @@ provider:
     # (e.g. the cluster is in an AWS VPC and you're starting ray from your laptop)
     # This is useful when debugging the local node provider with cloud VMs.
     # external_head_ip: YOUR_HEAD_PUBLIC_IP
-    worker_ips: [somai-serv03.emory.edu]
+    worker_ips: [somai-serv02.emory.edu, somai-serv03.emory.edu]
     # Optional when running automatic cluster management on prem. If you use a coordinator server,
     # then you can launch multiple autoscaling clusters on the same set of machines, and the coordinator
     # will assign individual nodes to clusters as needed.
@@ -46,13 +46,13 @@ auth:
 # node. This number should be >= 0.
 # Typically, min_workers == max_workers == len(worker_ips).
 # This field is optional.
-min_workers: 1
+min_workers: 2
 
 # The maximum number of workers nodes to launch in addition to the head node.
 # This takes precedence over min_workers.
 # Typically, min_workers == max_workers == len(worker_ips).
 # This field is optional.
-max_workers: 1
+max_workers: 2
 # The default behavior for manually managed clusters is
 # min_workers == max_workers == len(worker_ips),
 # meaning that Ray is started on all available nodes of the cluster.
